# Trade

./: .gitignore  Action.cpp  Action.hpp  CMakeLists.txt  Currency.cpp  Currency.hpp  Error.cpp  Error.hpp  Main.cpp  Makefile  MarketValue.cpp  MarketValue.hpp  MyBot.cpp  MyBot.hpp  Setting.cpp  Setting.hpp  Update.cpp  Update.hpp
Doc/: Crypto Trader Rules _ Riddles.io Docs.html
input/: ReadMe.txt  input.txt  input2
